[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git="https://github.com/iced-rs/iced.git", rev="refs/tags/text-editor", features = ["tokio", "highlighter"] }
tokio = { version = "1.32", features = ["fs"] }
rfd = "0.12"
log = "0.4"

[profile.release]
opt-level = "z"  # Enable optimizations for release builds
debug = false     # Disable debug information in release builds

[package.metadata.docs.rs]
# Tell docs.rs to generate docs for this crate on Windows
target = "x86_64-pc-windows-msvc"
features = ["win-gui"]
